-in the wdc@pcmcia driver, don't try to powerup/down while cold or  shutting down -- this is only supposed to happen from the pcmcia  kernel thread while the system is running -in wd_shutdown, call ata_addref first, so that the adapter is either  active or we know that it isn't This fixes a hang on shutdown-p reported by Dennis den Brok per PR kern/40531. Verified by by Dennis and me. (reported against 5.0-Beta, so this is a pullup candidate)